--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://github.com/glennreyes/react-countup#readme",
   "main": "lib/index.js",
   "scripts": {
-    "prebuild": "npm run test && npm run clean",
+    "prebuild": "npm t && npm run clean",
     "build": "NODE_ENV=production babel --out-dir=lib --ignore=test src",
     "coverage": "cat ./coverage/lcov/lcov.info | coveralls",
     "clean": "rimraf lib",
@@ -22,7 +22,7 @@
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm t -- --watch"
   },
   "keywords": [
     "react",
@@ -38,28 +38,29 @@
   },
   "dependencies": {
     "countup.js": "^1.7.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-jest": "^12.0.2",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-jest": "^12.1.0",
+    "babel-polyfill": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "cross-env": "^1.0.8",
     "enzyme": "^2.3.0",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^9.0.0",
-    "eslint-plugin-import": "^1.7.0",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
     "express": "^4.13.4",
     "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.1.0",
     "rimraf": "^2.5.2"
   }
 }
