--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "coveralls": "^2.11.9",
     "cross-env": "^1.0.8",
     "enzyme": "^2.3.0",
     "eslint": "^2.10.2",
