--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
-sudo: true
 node_js:
-  - "5.0"
-  - "6.0"
+  - "5"
+  - "6"
 script: npm run build
 notifications:
   email:
     on_failure: change
-after_success: 'npm run coverage'
+after_success: 'npm run test:coverage'
