--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script: npm run build
 notifications:
   email:
     on_failure: change
-after_success: 'npm run test:coverage'
+after_success: 'npm run coveralls'
