--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test mocha --opts mocha.opts",
     "test:watch": "npm t -- --watch",
-    "test:coverage": "cross-env NODE_ENV=test istanbul cover _mocha --report lcovonly -- -R spec --opts mocha.opts"
+    "test:coverage": "cross-env NODE_ENV=test istanbul cover _mocha --report lcovonly -- --opts mocha.opts"
   },
   "keywords": [
     "react",
@@ -60,6 +60,7 @@
     "expect": "^1.20.1",
     "express": "^4.13.4",
     "istanbul": "^1.0.0-alpha.2",
+    "jsdom": "^9.2.0",
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
     "react-addons-test-utils": "^15.1.0",
