--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   "scripts": {
     "prebuild": "npm t && npm run clean",
     "build": "cross-env NODE_ENV=production babel src -d lib",
-    "clean": "rimraf lib",
+    "build:demo": "npm run clean && npm run build && cross-env NODE_ENV=production webpack -p --config webpack.config.prod",
+    "clean": "npm run clean:lib && npm run clean:demo",
+    "clean:lib": "rimraf lib",
+    "clean:demo": "rimraf build",
     "coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls",
+    "deploy": "npm run build:demo && npm run deploy:demo",
+    "deploy:demo": "gh-pages -d build",
     "prepublish": "npm run build",
     "lint": "eslint .",
     "pretest": "npm run lint",
+    "start": "node server",
     "test": "cross-env NODE_ENV=test mocha --opts mocha.opts",
     "test:watch": "npm t -- --watch",
     "test:coverage": "cross-env NODE_ENV=test istanbul cover _mocha --report lcovonly -- -R spec --opts mocha.opts"
@@ -45,12 +51,15 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.8",
+    "css-loader": "^0.23.1",
+    "cssnano": "^3.6.2",
     "enzyme": "^2.3.0",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
@@ -59,11 +68,20 @@
     "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
     "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "^2.17.0",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.2.0",
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
+    "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "sanitize.css": "^3.3.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
