Initial demo app

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ]
+  "presets": ["es2015", "react", "stage-0"],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
