--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.8",
@@ -70,6 +71,7 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
+    "highlight.js": "^9.4.0",
     "html-webpack-plugin": "^2.17.0",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.2.0",
@@ -77,6 +79,7 @@
     "mocha-lcov-reporter": "^1.2.0",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
+    "react-highlight.js": "^1.0.2",
     "rimraf": "^2.5.2",
     "sanitize.css": "^3.3.0",
     "style-loader": "^0.13.1",
