--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "jsdom": "^9.2.0",
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
+    "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
     "react-highlight.js": "^1.0.2",
