--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/glennreyes/react-countup.git"
+    "url": "https://github.com/glennreyes/react-countup.git"
   },
   "bugs": {
     "url": "https://github.com/glennreyes/react-countup/issues"
@@ -34,6 +34,7 @@
   "keywords": [
     "react",
     "react.js",
+    "react-component",
     "countup",
     "countup.js",
     "counter",
