--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "1.1.3",
   "description": "A React component wrapper around CountUp.js",
   "author": "Glenn Reyes",
+  "keywords": [
+    "react-component",
+    "react",
+    "react.js",
+    "countup",
+    "countup.js",
+    "counter",
+    "animation"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -11,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/glennreyes/react-countup/issues"
   },
-  "homepage": "https://github.com/glennreyes/react-countup#readme",
+  "homepage": "https://glennreyes.github.io/react-countup",
   "main": "lib/index.js",
   "scripts": {
     "prebuild": "npm t && npm run clean",
@@ -31,15 +40,6 @@
     "test:watch": "npm t -- --watch",
     "test:coverage": "cross-env NODE_ENV=test istanbul cover _mocha --report lcovonly -- -R spec --opts mocha.opts"
   },
-  "keywords": [
-    "react-component",
-    "react",
-    "react.js",
-    "countup",
-    "countup.js",
-    "counter",
-    "animation"
-  ],
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0"
