Remove src folder for npm registry

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://glennreyes.github.io/react-countup",
   "main": "lib/index.js",
   "files": [
-    "lib",
-    "src"
+    "lib"
   ],
   "scripts": {
     "prebuild": "npm t && npm run clean",
