--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,8 @@
     "mocha": true,
     "node": true,
   },
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "rules": {
+    "import/no-extraneous-dependencies": 0,
+  },
 }
