--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "eslint-plugin-react": "^6.0.0",
     "expect": "^1.20.2",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "gh-pages": "^0.11.0",
+    "highlight.js": "^9.6.0",
     "html-webpack-plugin": "^2.22.0",
-    "highlight.js": "^9.5.0",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.4.1",
     "mocha": "^3.0.2",
@@ -85,10 +85,10 @@
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.3.0",
     "react-highlight.js": "^1.0.4",
-    "sanitize.css": "^4.1.0",
     "rimraf": "^2.5.4",
+    "sanitize.css": "^4.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
+    "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
