Use CRA example as our current demo page

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "hello-world",
+  "name": "react-countup-demo",
+  "homepage": "https://glennreyes.github.io/react-countup",
   "version": "0.1.0",
-  "private": true,
   "devDependencies": {
-    "react-scripts": "0.6.0",
+    "gh-pages": "^0.11.0",
     "highlight.js": "^9.6.0",
     "react-highlight.js": "^1.0.5",
+    "react-scripts": "0.6.0",
     "sanitize.css": "^4.1.0"
   },
   "dependencies": {
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "react-scripts build"
   }
 }
