--- a/package.json
+++ b/package.json
@@ -28,17 +28,11 @@
   "scripts": {
     "prebuild": "npm t && npm run clean",
     "build": "cross-env NODE_ENV=production babel src -d lib",
-    "build:demo": "npm run clean && npm run build && cross-env NODE_ENV=production webpack -p --config webpack.config.prod --progress",
-    "clean": "npm run clean:lib && npm run clean:demo",
-    "clean:lib": "rimraf lib",
-    "clean:demo": "rimraf build",
+    "clean": "rimraf lib",
     "coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls",
-    "deploy": "npm run build:demo && npm run deploy:demo",
-    "deploy:demo": "gh-pages -d build",
     "prepublish": "npm run build",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "start": "node server",
     "test": "cross-env NODE_ENV=test mocha --opts mocha.opts",
     "test:watch": "npm t -- --watch",
     "test:coverage": "cross-env NODE_ENV=test istanbul cover _mocha --report lcovonly -- -R spec --opts mocha.opts"
@@ -59,12 +53,9 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "coveralls": "^2.11.12",
     "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "cssnano": "^3.7.4",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^12.0.0",
@@ -72,24 +63,10 @@
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
     "expect": "^1.20.2",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
-    "gh-pages": "^0.11.0",
-    "highlight.js": "^9.6.0",
-    "html-webpack-plugin": "^2.22.0",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.5.0",
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.2.0",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-loader": "^0.13.0",
-    "react-addons-test-utils": "^15.3.1",
-    "react-highlight.js": "^1.0.5",
-    "rimraf": "^2.5.4",
-    "sanitize.css": "^4.1.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "react-addons-test-utils": "^15.3.1"
   }
 }
