--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: node_js
 node_js:
   - "5"
   - "6"
-script: npm run build
-notifications:
-  email:
-    on_failure: change
-after_success: 'npm run coveralls'
+cache:
+  directories:
+    - $HOME/.npm
+    - $HOME/.yarn-cache
+    - node_modules
+install:
+  - time yarn
+script: yarn run build
+after_success: 'yarn run coveralls'
