Sure, we need yarn on the machine

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
     - $HOME/.npm
     - $HOME/.yarn-cache
     - node_modules
+before_install:
+  - time npm i -g yarn --cache-min 999999999
 install:
   - time yarn
 script: yarn run build
