--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "lib"
   ],
   "scripts": {
-    "prebuild": "npm t && npm run clean",
+    "prebuild": "yarn test && yarn run clean",
     "build": "cross-env NODE_ENV=production babel src -d lib",
     "clean": "rimraf lib",
-    "coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls",
-    "prepublish": "npm run build",
+    "coveralls": "yarn run test:coverage && cat ./coverage/lcov.info | coveralls",
+    "prepublish": "yarn run build",
     "lint": "eslint .",
-    "pretest": "npm run lint",
+    "pretest": "yarn run lint",
     "test": "cross-env NODE_ENV=test mocha --opts mocha.opts",
-    "test:watch": "npm t -- --watch",
+    "test:watch": "yarn t -- --watch",
     "test:coverage": "cross-env NODE_ENV=test istanbul cover _mocha --report lcovonly -- -R spec --opts mocha.opts"
   },
   "peerDependencies": {
@@ -48,13 +48,13 @@
     "react-dom": "^15.3.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.6",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.17.0",
+    "babel-preset-stage-2": "^6.18.0",
     "coveralls": "^2.11.14",
     "cross-env": "^3.1.3",
     "enzyme": "^2.5.1",
@@ -65,7 +65,7 @@
     "eslint-plugin-react": "^6.4.1",
     "expect": "^1.20.2",
     "istanbul": "^1.0.0-alpha.2",
-    "jsdom": "^9.8.0",
+    "jsdom": "^9.8.3",
     "mocha": "^3.1.2",
     "mocha-lcov-reporter": "^1.2.0",
     "react-addons-test-utils": "^15.3.2",
