chore(core): Major refactor
- Remove findDOMNode in favor of refs
- Upgrade packages
- Remove shallowCompare
- shouldComponentUpdate condition improvements
- Remove states
- expose startAnimation function to manually start animations
- Use jest for unit testing
- Simplify folder structure
- Use babel-preset-env
- Replace PropTypes with Flowtypes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-build
-coverage
-lib
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-*.log
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env
+npm-debug.log
