--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["es2015", "react", "stage-2"]
+  "plugins": ["transform-flow-strip-types"],
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "node": true
+        }
+      }
+    ],
+    "stage-2",
+    "react"
+  ]
 }
