--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 language: node_js
 node_js:
-  - "6"
+  - "node"
 cache:
+  yarn: true
   directories:
-    - $HOME/.npm
-    - $HOME/.yarn-cache
     - node_modules
-before_install:
-  - time npm i -g yarn --cache-min 999999999
-install:
-  - time yarn
 script: yarn run build
-after_success: 'yarn run coveralls'
