--- a/package.json
+++ b/package.json
@@ -34,13 +34,11 @@
     "test": "jest --coverage"
   },
   "peerDependencies": {
-    "react": ">=0.15.0",
-    "react-dom": ">=0.15.0"
+    "react": ">=0.15.0"
   },
   "dependencies": {
     "countup.js": "1.8.2",
-    "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react": "15.4.2"
   },
   "devDependencies": {
     "babel": "6.23.0",
@@ -50,7 +48,6 @@
     "babel-preset-env": "1.2.1",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-2": "6.22.0",
-    "enzyme": "2.7.1",
     "eslint": "3.17.1",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-flowtype": "2.30.3",
@@ -59,6 +56,7 @@
     "eslint-plugin-react": "6.10.0",
     "flow-bin": "0.41.0",
     "jest": "19.0.2",
-    "react-addons-test-utils": "15.4.2"
+    "react-dom": "^15.4.2",
+    "react-test-renderer": "^15.4.2"
   }
 }
