--- a/demo/package.json
+++ b/demo/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-countup-demo",
   "homepage": "https://glennreyes.github.io/react-countup",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -10,13 +11,14 @@
   },
   "devDependencies": {
     "gh-pages": "0.12.0",
-    "highlight.js": "9.10.0",
-    "react-highlight.js": "1.0.5",
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "highlight.js": "^9.10.0",
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-countup": "^2.0.1",
+    "react-dom": "^15.4.2",
+    "react-highlight.js": "^1.0.5"
   }
 }
