--- a/demo/package.json
+++ b/demo/package.json
@@ -9,6 +9,10 @@
     "deploy": "gh-pages -d build",
     "predeploy": "react-scripts build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/glennreyes/react-countup.git"
+  },
   "devDependencies": {
     "gh-pages": "0.12.0",
     "react-scripts": "0.9.5"
@@ -17,7 +21,7 @@
     "highlight.js": "^9.10.0",
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
-    "react-countup": "^2.0.1",
+    "react-countup": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-highlight.js": "^1.0.5"
   }
