fix(chore): Fix error when built with webpack

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
       "env",
       {
         "targets": {
+          "browsers": ["last 2 versions", "> 1%"],
           "node": true
         }
       }
