--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-cli": "^6.24.0",
     "babel-eslint": "7.2.1",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
-    "babel-preset-env": "1.3.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-2": "6.22.0",
     "eslint": "3.19.0",
