--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-2": "6.22.0",
-    "eslint": "3.19.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-flowtype": "2.30.4",
     "eslint-plugin-import": "2.2.0",
