--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react": ">=0.15.0"
   },
   "dependencies": {
-    "countup.js": "1.8.3",
+    "countup.js": "^1.8.3",
     "react": "15.4.2"
   },
   "devDependencies": {
@@ -55,7 +55,7 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
-    "flow-bin": "0.43.0",
+    "flow-bin": "^0.43.0",
     "husky": "^0.13.2",
     "jest": "19.0.2",
     "lint-staged": "^3.4.0",
