--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -2,6 +2,7 @@
   "index.jsx": [
     "prettier --single-quote --trailing-comma all --parser flow --write",
     "eslint --ext .js,.jsx",
-    "git add"
+    "git add",
+    "jest --findRelatedTests"
   ]
 }
