--- a/package.json
+++ b/package.json
@@ -39,27 +39,27 @@
   },
   "dependencies": {
     "countup.js": "^1.8.5",
-    "react": "15.4.2"
+    "react": "^15.5.4"
   },
   "devDependencies": {
     "babel": "6.23.0",
-    "babel-cli": "^6.24.0",
-    "babel-eslint": "7.2.1",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-react": "6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-flowtype": "2.30.4",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.3",
-    "flow-bin": "^0.43.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "flow-bin": "^0.45.0",
     "husky": "^0.13.2",
-    "jest": "19.0.2",
-    "lint-staged": "^3.4.0",
-    "react-dom": "^15.4.2",
-    "react-test-renderer": "^15.4.2"
+    "jest": "^20.0.0",
+    "lint-staged": "^3.4.1",
+    "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.5.4"
   }
 }
