--- a/demo/package.json
+++ b/demo/package.json
@@ -18,11 +18,11 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
-    "highlight.js": "^9.10.0",
-    "normalize.css": "^5.0.0",
-    "react": "^15.4.2",
-    "react-countup": "^2.0.3",
-    "react-dom": "^15.4.2",
-    "react-highlight.js": "^1.0.5"
+    "highlight.js": "^9.11.0",
+    "normalize.css": "^7.0.0",
+    "react": "^15.5.4",
+    "react-countup": "^2.1.1",
+    "react-dom": "^15.5.4",
+    "react-highlight": "^0.10.0"
   }
 }
