--- a/demo/package.json
+++ b/demo/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/glennreyes/react-countup.git"
   },
   "devDependencies": {
-    "gh-pages": "0.12.0",
+    "gh-pages": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "dependencies": {
