--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "husky": "^0.13.2",
     "jest": "^20.0.3",
     "lint-staged": "^3.4.2",
+    "prettier": "^1.3.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4"
