--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint": "eslint --ext .js,.jsx index.jsx",
     "precommit": "lint-staged",
     "prepare": "yarn run build",
+    "prettier": "prettier --single-quote --trailing-comma all --parser flow --write index.jsx",
     "test": "jest --coverage"
   },
   "peerDependencies": {
@@ -50,15 +51,15 @@
     "babel-preset-stage-2": "6.24.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-flowtype": "^2.33.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.46.0",
-    "husky": "^0.13.2",
-    "jest": "^20.0.3",
-    "lint-staged": "^3.4.2",
-    "prettier": "^1.3.1",
+    "flow-bin": "^0.47.0",
+    "husky": "^0.13.4",
+    "jest": "^20.0.4",
+    "lint-staged": "^3.6.0",
+    "prettier": "^1.4.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4"
