--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,5 @@
 {
-  "index.jsx": [
+  "index.js": [
     "prettier --single-quote --trailing-comma all --parser flow --write",
     "eslint --ext .js,.jsx",
     "git add",
