--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   "homepage": "https://glennreyes.github.io/react-countup",
   "main": "build",
   "files": [
-    "index.jsx",
+    "index.js",
     "build"
   ],
   "scripts": {
-    "build": "babel index.jsx -d build",
+    "build": "babel index.js -d build",
     "flow": "flow check",
-    "lint": "eslint --ext .js,.jsx index.jsx",
+    "lint": "eslint --ext .js,.jsx index.js",
     "precommit": "lint-staged",
     "prepare": "yarn run build",
-    "prettier": "prettier --single-quote --trailing-comma all --parser flow --write index.jsx",
+    "prettier": "prettier --single-quote --trailing-comma all --parser flow --write index.js",
     "test": "jest --coverage"
   },
   "peerDependencies": {
