--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "test": "jest --coverage"
   },
   "peerDependencies": {
-    "react": ">=0.15.0"
+    "react": ">=0.14.0"
   },
   "dependencies": {
     "countup.js": "^1.8.5"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-preset-env": "^1.6.0",
@@ -59,8 +60,7 @@
     "jest": "^20.0.4",
     "lint-staged": "^4.0.3",
     "prettier": "^1.5.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
