--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["transform-flow-strip-types"],
+  "plugins": [],
   "presets": [
     [
       "env",
@@ -10,7 +10,6 @@
         }
       }
     ],
-    "stage-2",
     "react"
   ]
 }
