--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
