--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://glennreyes.github.io/react-countup",
   "main": "build",
   "files": [
-    "index.js",
-    "build"
+    "index.js"
   ],
   "scripts": {
     "build": "babel index.js -d build",
