--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://glennreyes.github.io/react-countup",
   "main": "build",
   "files": [
-    "index.js"
+    "index.js",
+    "build"
   ],
   "scripts": {
     "build": "babel index.js -d build",
@@ -41,9 +42,25 @@
     "countup.js": "^1.8.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^21.0.2",
+    "babel-plugin-transform-flow-strip-types": "6.22.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.2.0",
+    "flow-bin": "^0.52.0",
+    "husky": "^0.14.3",
+    "jest": "^20.0.4",
+    "lint-staged": "^4.0.3",
+    "prettier": "^1.5.3",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
