--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://glennreyes.github.io/react-countup",
   "main": "build",
   "files": [
+    "index.js",
     "build"
   ],
   "scripts": {
