--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "eslint --ext .js,.jsx index.js",
     "postinstall": "yarn run build",
     "precommit": "lint-staged",
-    "prepare": "yarn run build",
+    // "prepare": "yarn run build",
     "prettier": "prettier --single-quote --trailing-comma all --parser flow --write index.js",
     "test": "jest --coverage"
   },
