--- a/demo/package.json
+++ b/demo/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "highlight.js": "^9.12.0",
     "normalize.css": "^7.0.0",
-    "react": "^16.0.0",
+    "react": "15",
     "react-countup": "^2.2.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "15",
     "react-highlight": "^0.10.0"
   }
 }
