--- a/package.json
+++ b/package.json
@@ -42,19 +42,18 @@
     "countup.js": "^1.9.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.2",
-    "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.7.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.2.0",
+    "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.58.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
