--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "flow": "flow check",
     "lint": "eslint --ext .js,.jsx index.js",
     "precommit": "lint-staged",
-    "prepare": "yarn run build",
+    "prepare": "npm run build",
     "prettier": "prettier --single-quote --trailing-comma all --parser flow --write index.js",
     "test": "jest --coverage"
   },
