Replace stage-2 with used babel plugin

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
+  "plugins": ["transform-class-properties"],
   "presets": [
     [
       "env",
@@ -9,7 +10,6 @@
         }
       }
     ],
-    "stage-2",
     "react"
   ]
 }
