--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-node_modules
-
-# testing
 coverage
-
-# production
 build
-
-# misc
+node_modules
+yarn-error.log
 .DS_Store
-.env
-*.log
