--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.3.0"
   },
   "dependencies": {
-    "countup.js": "^1.9.3"
+    "countup.js": "^1.9.3",
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
