--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,4 @@
 {
   "plugins": ["transform-class-properties"],
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": ["last 2 versions", "> 1%"],
-          "node": true
-        }
-      }
-    ],
-    "react"
-  ]
+  "presets": [["env", { "modules": false }], "react"]
 }
