--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "react": "^16.3.0"
+    "react": ">= 16.3.0"
   },
   "dependencies": {
     "countup.js": "^1.9.3",
