--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "raf": "^3.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-test-renderer": "^16.4.1",
+    "react-test-renderer": "^16.4.2",
+    "react-testing-library": "^4.1.6",
     "rollup": "^0.63.4",
     "rollup-plugin-babel": "^3.0.7"
   }
