Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
   - "node"
-cache:
-  yarn: true
-script:
-  - yarn test
-  - yarn build
+cache: yarn
+jobs:
+  include:
+    - stage: test & coverage
+      script:
+        - yarn test --coverage && cat ./coverage/lcov.info | npx coveralls
+    - stage: build
+      script:
+        - yarn build
