--- a/docs/package.json
+++ b/docs/package.json
@@ -10,12 +10,13 @@
     "react-github-corner": "^2.3.0",
     "react-live": "^1.11.0",
     "react-scripts": "1.1.4",
+    "serve": "^9.4.2",
     "styled-components": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "now-start": "serve -s build",
+    "test": "react-scripts test --env=jsdom"
   }
 }
