--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
-  "plugins": ["transform-class-properties"],
-  "presets": [["env", { "modules": false }], "react"],
+  "plugins": ["@babel/proposal-class-properties"],
+  "presets": [["@babel/env", { "modules": false }], "@babel/react"],
   "env": {
     "test": {
-      "plugins": ["transform-class-properties"],
-      "presets": ["env"]
+      "plugins": ["@babel/proposal-class-properties"],
+      "presets": ["@babel/env"]
     }
   }
 }
