--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
-  "plugins": ["@babel/proposal-class-properties"],
-  "presets": [["@babel/env", { "modules": false }], "@babel/react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "presets": [
+    ["@babel/preset-env", { "modules": false }],
+    "@babel/preset-react"
+  ],
   "env": {
     "test": {
-      "plugins": ["@babel/proposal-class-properties"],
-      "presets": ["@babel/env"]
+      "plugins": ["@babel/plugin-proposal-class-properties"],
+      "presets": ["@babel/preset-env"]
     }
   }
 }
