--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^23.6.0",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "prettier": "^1.14.3",
