--- a/demo/package.json
+++ b/demo/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-countup": "^4.0.0-alpha.4",
-    "react-dom": "^16.4.2",
-    "react-feather": "^1.1.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.0",
+    "react-countup": "^4.0.0-alpha.6",
+    "react-dom": "^16.6.0",
+    "react-feather": "^1.1.4",
     "react-github-corner": "^2.3.0",
-    "react-live": "^1.11.0",
-    "react-scripts": "1.1.4",
-    "serve": "^9.4.2",
-    "styled-components": "^3.4.2"
+    "react-live": "^1.12.0",
+    "react-scripts": "2.0.5",
+    "serve": "^10.0.2",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
