--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "prepublish": "yarn build",
+    "prepublishOnly": "yarn build",
     "test": "jest"
   },
   "peerDependencies": {
