--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "homepage": "https://react-countup.now.sh",
   "main": "build",
   "files": [
-    "build",
-    "src"
+    "build"
   ],
   "scripts": {
     "build": "rollup -c",
