Updated react and react-dom versions

--- a/demo/package.json
+++ b/demo/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "^16.8.0-alpha.1",
+    "react": "^16.8.1",
     "react-countup": "^4.0.0",
-    "react-dom": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.1",
     "react-feather": "^1.1.4",
     "react-github-corner": "^2.3.0",
     "react-live": "^1.12.0",
