--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,3 @@
 {
-  "extends": [":automergeMinor", ":pinOnlyDevDependencies", "config:base"]
+  "extends": [":automergeMinor", ":pinOnlyDevDependencies", "config:js-lib"]
 }
