--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "files": [
     "build"
   ],
+  "typings": "index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "yarn build",
