--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "7.7.6",
     "@babel/preset-react": "7.7.4",
     "@testing-library/react": "9.3.3",
+    "@testing-library/react-hooks": "^3.2.1",
     "babel-jest": "24.9.0",
     "husky": "3.1.0",
     "jest": "24.9.0",
@@ -51,6 +52,7 @@
     "raf": "3.4.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-test-renderer": "^16.12.0",
     "rollup": "1.27.12",
     "rollup-plugin-babel": "4.3.3"
   }
