--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@babel/plugin-proposal-class-properties": "7.8.0",
     "@babel/preset-env": "7.8.2",
     "@babel/preset-react": "7.8.0",
+    "@rollup/plugin-typescript": "^2.1.0",
     "@testing-library/react": "9.4.0",
     "@testing-library/react-hooks": "3.2.1",
+    "@types/react": "^16.9.17",
     "babel-jest": "24.9.0",
     "husky": "3.1.0",
     "jest": "24.9.0",
@@ -54,6 +56,8 @@
     "react-dom": "16.12.0",
     "react-test-renderer": "16.12.0",
     "rollup": "1.29.0",
-    "rollup-plugin-babel": "4.3.3"
+    "rollup-plugin-babel": "4.3.3",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.4"
   }
 }
