--- a/demo/package.json
+++ b/demo/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "^16.10.2",
-    "react-countup": "^4.2.2",
-    "react-dom": "^16.10.2",
+    "react": "file:../node_modules/react",
+    "react-countup": "file:../build",
+    "react-dom": "file:../node_modules/react-dom",
     "react-feather": "^2.0.3",
     "react-github-corner": "^2.3.0",
     "react-live": "^2.2.1",
