--- a/.babelrc
+++ b/.babelrc
@@ -6,8 +6,8 @@
   ],
   "env": {
     "test": {
-      "plugins": ["@babel/plugin-proposal-class-properties"],
-      "presets": ["@babel/preset-env"]
+      "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-transform-modules-commonjs"],
+      "presets": [["@babel/preset-env", {"targets": {"node": "current"}}], "@babel/preset-typescript"]
     }
   }
 }
