--- a/package.json
+++ b/package.json
@@ -33,15 +33,19 @@
     "react": ">= 16.3.0"
   },
   "dependencies": {
+    "@types/jest": "^24.9.0",
     "countup.js": "^2.0.4",
     "prop-types": "^15.7.2",
+    "ts-jest": "^24.3.0",
     "warning": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.8.0",
     "@babel/plugin-proposal-class-properties": "7.8.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/preset-env": "7.8.2",
     "@babel/preset-react": "7.8.0",
+    "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-typescript": "^2.1.0",
     "@testing-library/react": "9.4.0",
     "@testing-library/react-hooks": "3.2.1",
