--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "warning": "^4.0.3"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^2.1.0",
+    "@rollup/plugin-typescript": "3.0.0",
     "@testing-library/react": "9.4.0",
     "@testing-library/react-hooks": "3.2.1",
-    "@types/react": "^16.9.19",
+    "@types/jest": "25.1.0",
+    "@types/react": "16.9.19",
     "husky": "4.2.1",
     "jest": "25.1.0",
     "prettier": "1.19.1",
@@ -51,7 +52,8 @@
     "react-dom": "16.12.0",
     "react-test-renderer": "16.12.0",
     "rollup": "1.30.1",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "ts-jest": "25.0.0",
+    "tslib": "1.10.0",
+    "typescript": "3.7.5"
   }
 }
