--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@testing-library/react": "9.4.1",
     "@testing-library/react-hooks": "3.2.1",
     "@types/jest": "25.1.3",
-    "@types/react": "16.9.23",
+    "@types/react": "^16.9.23",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "prettier": "1.19.1",
