--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
   "env": {
     "test": {
       "plugins": ["@babel/plugin-proposal-class-properties"],
-      "presets": ["@babel/preset-env"]
+      "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
     }
   }
 }
