--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "yarn build",
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "peerDependencies": {
     "react": ">= 16.3.0"
@@ -45,6 +46,7 @@
     "@testing-library/react": "12.0.0",
     "@testing-library/react-hooks": "7.0.0",
     "babel-jest": "26.6.3",
+    "coveralls": "^3.1.1",
     "jest": "27.0.6",
     "prettier": "2.3.2",
     "pretty-quick": "3.1.1",
