--- a/babel.config.json
+++ b/babel.config.json
@@ -1,13 +1,16 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties"],
   "presets": [
     ["@babel/preset-env", { "modules": false }],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "test": {
       "plugins": ["@babel/plugin-proposal-class-properties"],
-      "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
+      "presets": [
+        ["@babel/preset-env", { "targets": { "node": "current" } }]
+      ]
     }
   }
 }
