Initialize and run prettier + eslint with rules of hooks checks.

--- a/babel.config.json
+++ b/babel.config.json
@@ -6,9 +6,7 @@
   ],
   "env": {
     "test": {
-      "presets": [
-        ["@babel/preset-env", { "targets": { "node": "current" } }]
-      ]
+      "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
     }
   }
 }
